Make sure projects don't wrap lines.

--- a/public/stylesheets/blueprint.css
+++ b/public/stylesheets/blueprint.css
@@ -25,7 +25,7 @@ input[type=text], textarea {
   border-width: 0 1px 1px 0;
   line-height: 25px;
   position: absolute;
-  width: 140px;
+  min-width: 140px;
 }
 .notice {
   background: #060;
